fix: Strip artist name to ellipses if its too long

--- a/src/containers/artist/Artist.scss
+++ b/src/containers/artist/Artist.scss
@@ -170,8 +170,12 @@
         font-size: 20px;
         line-height: 130%;
         color: $black;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         @include sm {
           display: block;
+          max-width: 300px;
         }
       }
       .avatar {
